# medium-support

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
ctest_pytest/: CMakeLists.txt  README.md  lib.cpp  lib.hpp  pyproject.toml  test_lib.cpp
ctest_pytest/pylib/: .gitignore  CMakeLists.txt
ctest_pytest/pylib/cpp/: CMakeLists.txt  bindings.cpp
ctest_pytest/pylib/tests/: test_add.py
nanobind_example/: CMakeLists.txt  my_ext.cpp
pixi-cpp-py/: CMakeLists.txt  main.cpp  pixi.toml  test_simple.py
proto-cfg-file/: CMakeLists.txt  config.proto  example.cpp  example.json  example.txtpb  invalid.json  invalid.txtpb
